--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "author": "commenthol",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start": "react-scripts start",
+    "test": "react-scripts test"
   },
   "browserslist": {
     "production": [
@@ -40,5 +40,8 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "engines": {
+    "node": "^16"
+  }
 }
